@@ -14,6 +14,8 @@ Version 1.4.4+svn:
  * miscellaneous and bug fixes:
    * Fixed OOS bug when giving control and having move in undo stack.
    * Fixed crash when ai moves units next to level 0 hiden unit (bug #12252)
+   * Fixed loading ai parameters. MP side defination now overwrites 
+     era values (bug #12171)
 
 Version 1.4.4:
  * language and i18n:
